--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="images/me-round.jpg" alt="stuart profile pic"></td>
+      <td><img src="images/me-round" alt="stuart profile pic"></td>
       <td><h1>Stuart Haw</h1>
       <p><em>I am learning <strong>how</strong> to code</em></i></p>
       <p>I am originally from Ireland. I moved over here three years ago to study graphic design.</p></td>
